# abash

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/backend-nsjail/: Cargo.toml
crates/backend-nsjail/src/: lib.rs  linux.rs  linux_mounts.rs
crates/backend-virtual/: Cargo.toml
crates/backend-virtual/src/: awk.rs  base64cmd.rs  chmodcmd.rs  column.rs  comm.rs  cp.rs  curlcmd.rs  date.rs  diffcmd.rs  ducmd.rs  envcmd.rs  exprcmd.rs  find.rs  grepcmd.rs  gzipcmd.rs  hashcmd.rs  hostexec.rs  htmltomarkdown.rs  jq.rs  jq_engine.rs  jsexeccmd.rs  lib.rs  ls.rs  mv.rs  odcmd.rs  pathcmd.rs  printf.rs  python3cmd.rs  rg.rs  rm.rs  rmdir.rs  script.rs  seq.rs  splitcmd.rs  sqlite3cmd.rs  tarcmd.rs  tee.rs  tier2_files.rs  tier2_text.rs  tier3_exec.rs  (+5 more)
crates/core/: Cargo.toml
crates/core/src/: lib.rs  network.rs
docs/: compatibility.md  known-limitations.md  pending_commands.md  roadmap.md  threat-model.md
docs/specs/: architecture.md  phase-1-minimal-safe-execution-core.md  phase-2-workspace-and-filesystem-policy.md  phase-3-network-policy-and-data-access.md  phase-4-agent-tooling-and-observability.md  phase-5-compatibility-expansion.md  phase-6-extended-runtimes-and-privileged-extensions.md  requirements.md  tech-stack.md
examples/: README.md  basic_memory.py  detached_run.py  file_helpers.py  script_mode.py  workspace_host_cow.py  workspace_host_readwrite.py
examples/output/: hello.txt
python/abash/: __init__.py  _models.py  _native.pyi  _sandbox.py
src/: lib.rs  observability.rs  runtime.rs
tests/: test_integration.py  test_properties.py
