[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "abash"
version = "0.1.0"
description = "Safe bash-oriented execution primitives for agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anyio>=4.8",
]

[dependency-groups]
dev = [
  "hypothesis>=6.130",
  "maturin>=1.10,<2.0",
  "pytest>=8.3",
  "ruff>=0.11",
  "ty>=0.0.1a15",
]

[tool.maturin]
python-source = "python"
module-name = "abash._native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

